# 20s2-cp-spa-team-19

./: .gitignore  README.md
Team19/Code19/extensions/autotester/: CMakeLists.txt
Team19/Code19/extensions/autotester/src/: TestWrapper.h
Team19/Code19/src/spa/: CMakeLists.txt
Team19/Code19/src/spa/src/: AbstractAPI.h  Clause.cpp  Clause.h  ProcTable.cpp  ProcTable.h  QueryPreprocessor.h  Utility.cpp  Utility.h  VarTable.cpp  VarTable.h
Team19/Code19/src/spa/src/AST/: AssignStmt.h  CallStmt.h  CondExpr.h  CondExprBag.h  CondExprWrapper.h  ConstVal.h  Expr.h  IfStmt.h  Index.h  InfixCondExpr.h  InfixExpr.h  Node.h  PrefixCondExpr.h  PrintStmt.h  Proc.h  ProcName.h  Program.h  ReadStmt.h  RelExpr.h  Stmt.h  StmtLst.h  VarName.h  WhileStmt.h
Team19/Code19/src/spa/src/PKB/: Affects.cpp  Affects.h  AffectsBip.cpp  AffectsBip.h  Calls.cpp  Calls.h  ConstTable.cpp  ConstTable.h  Follows.cpp  Follows.h  Modifies.cpp  Modifies.h  Next.cpp  Next.h  NextBip.cpp  NextBip.h  PKB.cpp  PKB.h  Parent.cpp  Parent.h  ProcTable.cpp  ProcTable.h  StmtLstTable.cpp  StmtLstTable.h  StmtTable.cpp  StmtTable.h  Uses.cpp  Uses.h  VarTable.cpp  VarTable.h
Team19/Code19/src/spa/src/PQL/: AffectsBipEvaluator.cpp  AffectsBipEvaluator.h  AffectsBipTEvaluator.cpp  AffectsBipTEvaluator.h  AffectsEvaluator.cpp  AffectsEvaluator.h  AffectsTEvaluator.cpp  AffectsTEvaluator.h  CallsEvaluator.cpp  Clause.cpp  (+40 more)
Team19/Code19/src/unit_testing/: CMakeLists.txt
Team19/Code19/src/unit_testing/src/: ProcTable.cpp  TestConstTable.cpp  TestParser.cpp  TestUtility.cpp  TestVarTable.cpp  VarTableTest.cpp
(+292 files in other folders)
